[gd_scene load_steps=3 format=3 uid="uid://cdsk2ml3347yf"]

[ext_resource type="Script" uid="uid://bejlhlv3a5awk" path="res://scripts/scenes/gameplay/log_panel.gd" id="1_lv157"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d761l"]
bg_color = Color(0.21, 0.456, 0.354, 0.5)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="LogPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lv157")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="CombatLog" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/CombatLog"]
layout_mode = 2
size_flags_vertical = 3

[node name="CombatLog" type="RichTextLabel" parent="TabContainer/CombatLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
scroll_following = true
selection_enabled = true

[node name="Chat" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Chat"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatLog" type="RichTextLabel" parent="TabContainer/Chat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
scroll_following = true
selection_enabled = true

[node name="ChatInput" type="LineEdit" parent="TabContainer/Chat"]
layout_mode = 2
placeholder_text = "Write a message to the chat..."
max_length = 120
keep_editing_on_text_submit = true

[node name="InfoMessageBox" type="Panel" parent="TabContainer/Chat/ChatInput"]
visible = false
layout_mode = 0
offset_right = 300.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_d761l")

[node name="InfoMessage" type="RichTextLabel" parent="TabContainer/Chat/ChatInput/InfoMessageBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -15.0
offset_right = 305.0
offset_bottom = 15.0
grow_vertical = 2
bbcode_enabled = true
vertical_alignment = 1
